--- a/docs/Overview/Dashboard.mdx
+++ b/docs/Overview/Dashboard.mdx
@@ -1,4 +1,5 @@
 # Overview
+
 Hello, and welcome to the player documentation for Code-Character 2022!
 
 Code Character is a strategy programming game where you control troops in a turn-based game with code you write - in our favorite language C++,python,java :)
@@ -7,4 +8,15 @@ Let’s get started with a quick tutorial on how to get started.
 
 # Dashboard Interface
 
-On the left is the nav bar, with multiple of icons
+On the left there is the nav bar, with multiple of icons. Lets go one by one -
+
+<ul>
+<img src="/img/screenshots/dashboard.png"/>
+<li>Code Editor - where you would be writing code in language of your choice.</li>
+<li>Map Designer - You would be designing the map by putting your tower of your choice.</li>
+<li>Leadeboard - Leadeboard showing where you stand among other players, you can also initiate a match against player from the page.</li>
+<li>Commits - This page shows the commit history of map and code which you would have saved.</li>
+<li>BattleTV - Your previous matches and its result. You can also watch the watch the replay of match.</li>
+<li>Settings - Settings of the games fonts, themes and keybindings etc.</li>
+
+</ul>
