feat: Competition Guide

--- a/docs/Overview/GameRules.mdx
+++ b/docs/Overview/GameRules.mdx
@@ -11,12 +11,12 @@ There are two types of units
 <br />
 <b>Towers</b> - Towers are static and stay in their position and attacks when troops reach their range. Each tower has their own values and attributes
 <div align = "center">
-  <img src="/img/Overview/GameRules/Towers.png" />
+  <img src="/img/Overview/GameRules/Towers.png" alt="tower"/>
 </div>
 
 <b>Troops</b> - Troops can move and attack when defenders come in range. Troops can not pass through the tower.Troops can only be spawned at outer region of the map
 <div align = "center">
-  <img src="/img/Overview/GameRules/troop.png" />
+  <img src="/img/Overview/GameRules/troop.png" alt="troop" />
 </div>
 
 Towers occupy a 1x1 unit square area on the map in an isometric view and troops cannot move through a tower. Troops attack the tower till its health drops completely. Towers get destroyed once their health reaches zero
@@ -24,7 +24,7 @@ Towers occupy a 1x1 unit square area on the map in an isometric view and troops 
 Towers can be constructed on the tile till you have coins left in the store. Troops can be built through your code.
 
 This is how a game map looks like : 
-<img src="/img/Overview/GameRules/map.jpeg" />
+<img src="/img/Overview/GameRules/map.jpeg" alt="map"/>
 
 
 <br />
