--- a/docs/GameRules.mdx
+++ b/docs/GameRules.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_position: 2
+---
+
 # Game Rules
 
 Codecharacter is a game of strategic resource management. The objective of the game for attacker is to destroy defenders base as much as possible using as less coins as possible and the defender’s objective is to kill the enemy attacking and save the base.  
