fix: Minor Doc changes and fix in attacker and defender details

--- a/docs/GameRules.mdx
+++ b/docs/GameRules.mdx
@@ -4,24 +4,26 @@ sidebar_position: 2
 
 # Game Rules
 
-Codecharacter is a game of strategic resource management. The objective of the game for attacker is to destroy defenders base as much as possible using as less coins as possible and the defender’s objective is to kill the enemy attacking and save the base.
+Codecharacter is a game of strategic resource management. The objective of the game for attacker is to destroy the defender's base as much as possible using the least number of coins possible. The defender’s objective is to kill the enemy attacking and save the base.
 
-There are two types of units
+There are two types of units:
 
 <ul>
-  <li>Two kinds of towers</li>
-  <li>Two kinds of troops</li>
+  <li>Two types of towers</li>
+  <li>Three types of troops</li>
 </ul>
 <br />
 <br />
-<b>Towers</b> - Towers are static and stay in their position and attacks when
-troops reach their range. Each tower has their own values and attributes
+<b>Towers</b> - Towers are static and stay in their position and attack when
+troops reach their range. Each tower has their own values and attributes. One of the 
+towers can defend the aerial troops while the other can defend the ground troops.
 <div align="center">
   <img src="/img/Overview/GameRules/Towers.png" alt="tower" />
 </div>
 
-<b>Troops</b> - Troops can move and attack when defenders come in range. Troops can
-not pass through the tower.Troops can only be spawned at outer region of the map
+<b>Troops</b> - Troops can move and attack when defenders come in range. They can
+not pass through the tower. Troops can only be spawned in the outer region of the map.
+There are two ground troops and one aerial troop with their own characteristics which make each one unique.
 <div align="center">
   <img src="/img/Overview/GameRules/troop.png" alt="troop" />
 </div>
@@ -30,15 +32,15 @@ Towers occupy a 1x1 unit square area on the map in an isometric view and troops 
 
 Towers can be constructed on the tile till you have coins left in the store. Troops can be built through your code.
 
-This is how a game map looks like :
+This is what a game map looks like :
 
 <img src="/img/Overview/GameRules/map.jpeg" alt="map" />
 
 <br />
 <b>Goal of the game </b> - The attackers goal in the game is to destroy defender
-baseas much as possible using as less coins as possible and the defender’s goal
+bases as much as possible using as minimum an amount of coins as possible and the defender’s goal
 is to kill the enemy attacking and save the base.
 <br />
 <br />
-You will be given a fixed amount of coins to build your defender base. You have to
-code your attacker base.
+You will be given a fixed amount of coins to build your defender base. Your attacker base will be determined by
+the code you write.
