--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -4,7 +4,7 @@ sidebar_position: 3
 
 # Competition Guide
 
-Ultimately, Codecharacter is a game of competetion! The objective is to challenge other players and fight your way to the top of the leaderboard.
+Ultimately, Codecharacter is a game of competition! The objective is to challenge other players and fight your way to the top of the leaderboard.
 
 You can type your code in the Code Editor and click on the <code>Submit</code> button to submit your code to the leaderboard.
 
@@ -15,21 +15,21 @@ You can type your code in the Code Editor and click on the <code>Submit</code> b
 />
 <br />
 This will allow you to challenge anyone on the leaderboard with the submitted
-code. To challenge another player, simply click the challenge (sword icon)
-button next to their nickname on the leaderboard. You can keep submitting and
-updating your code whenever you want.
+code. To challenge another player, simply click the challenge button (sword icon) 
+next to their nickname on the leaderboard. You can keep updating and
+submitting your code as and when you want.
 <br />
 <br />
-Note that once you submit code, anyone can challenge you at anytime, and a match
+Note that once you submit a code, anyone can challenge you at anytime, and a match
 will automatically be simulated between you and the opposing player. You will receive
 a notification once the match ends, and you can view it in the <code>
     Battle TV
 </code>
-. Click on any of the maps below each match to see the match.
+. Click on any of the maps below each match to see that match.
 <br />
 You can also save different versions of your code by using the commit button on
 the top bar. Using the <code>Commits</code> Tab on the dashboard. A match can be
-initiated by you against your own previous code version.
+initiated by you against the previous version of your own code.
 <br />
 The list of matches you’ve played and top rated matches by other players are
 also available to watch on the <code>Battle TV</code>.
@@ -41,9 +41,9 @@ also available to watch on the <code>Battle TV</code>.
     align="center"
 />
 <li>The two tower buttons allows you to select the tower to be built.</li>
-<li>The move button helps you to move the map around your window</li>
+<li>The move button helps you move the map around your window</li>
 <li>The clear button clear all the towers that was built earlier</li>
-<li>The erase button helps to remove specific tower from position</li>
+<li>The erase button helps to remove a specific tower from its position</li>
 <li>
     Save button allows you to have three options:
     <ol>
@@ -53,7 +53,7 @@ also available to watch on the <code>Battle TV</code>.
     </ol>
 </li>
 
-You can view your code and map commits and their corresponding code and map in <code>History</code> page
+You can view your code and map commits and their corresponding code and map in the <code>History</code> page
 
 <img
     src="/img/Overview/CompetitionGuide/history.jpeg"
@@ -65,7 +65,7 @@ You can view your code and map commits and their corresponding code and map in <
 The leaderboard evaluates your position using your rating, which is based purely
 on the outcomes of your matches with other players. The Glicko ranking mechanism
 is used to calculate ranks. Players who are more actively playing matches are rewarded
-by this rating system, they tend to suffer lesser fall in ratings.
+by this rating system as they tend to suffer lesser fall in ratings.
 <br />
 <br />
 <img
