update(images): added attacker images and minor fixes

--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -36,7 +36,7 @@ also available to watch on the <code>Battle TV</code>.
 <br />
 <br />
 <img
-    src="/img/Overview/CompetitionGuide/MapButtons.jpeg"
+    src="/img/Overview/CompetitionGuide/MapButtons.png"
     alt="MapButtons"
     align="center"
 />
@@ -56,7 +56,7 @@ also available to watch on the <code>Battle TV</code>.
 You can view your code and map commits and their corresponding code and map in the <code>History</code> page
 
 <img
-    src="/img/Overview/CompetitionGuide/history.jpeg"
+    src="/img/Overview/CompetitionGuide/history.png"
     alt="history"
     align="center"
 />
@@ -69,7 +69,7 @@ by this rating system as they tend to suffer lesser fall in ratings.
 <br />
 <br />
 <img
-    src="/img/Overview/CompetitionGuide/leaderboard.jpeg"
+    src="/img/Overview/CompetitionGuide/leaderboard.png"
     alt="leaderboard"
     align="center"
 />
