--- a/docs/GameRules.mdx
+++ b/docs/GameRules.mdx
@@ -18,7 +18,7 @@ There are two types of units:
 troops reach their range. Each tower has their own values and attributes. One of the 
 towers can defend the aerial troops while the other can defend the ground troops.
 <div align="center">
-  <img src="/img/Overview/GameRules/Towers.png" alt="tower" />
+  <img src="/img/Overview/GameRules/towers.png" alt="tower" />
 </div>
 
 <b>Troops</b> - Troops can move and attack when defenders come in range. They can
@@ -34,7 +34,7 @@ Towers can be constructed on the tile till you have coins left in the store. Tro
 
 This is what a game map looks like :
 
-<img src="/img/Overview/GameRules/map.jpeg" alt="map" />
+<img src="/img/Overview/GameRules/map.png" alt="map" />
 
 <br />
 <b>Goal of the game </b> - The attackers goal in the game is to destroy defender
