--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -6,20 +6,20 @@ sidebar_position: 3
 
 Ultimately, Codecharacter is a game of competition! The objective is to challenge other players and fight your way to the top of the leaderboard.
 
-You can type your code in the Code Editor and click on the <code>Submit</code> button to submit your code to the leaderboard.
-
 <img
     src="/img/Overview/CompetitionGuide/buttons.png"
     alt="Buttons"
     align="center"
 />
 <br />
-This will allow you to challenge anyone on the leaderboard with the submitted
-code. To challenge another player, simply click the challenge button (sword icon) 
-next to their nickname on the leaderboard. You can keep updating and
-submitting your code as and when you want.
 <br />
-<br />
+Let us go through these buttons in order:
+<ol>
+    <li><b>The Save button</b>: To save your present code</li>
+    <li><b>The Simulate button</b>: To simulate a match</li>
+    <li><b>The Commit button</b>: To commit your existing code into the commit history</li>
+    <li><b>The Submit button</b>: This will submit your present code to the leaderboard</li>
+</ol>
 Note that once you submit a code, anyone can challenge you at anytime, and a match
 will automatically be simulated between you and the opposing player. You will receive
 a notification once the match ends, and you can view it in the <code>
@@ -27,9 +27,11 @@ a notification once the match ends, and you can view it in the <code>
 </code>
 . Click on any of the maps below each match to see that match.
 <br />
+<br />
 You can also save different versions of your code by using the commit button on
 the top bar. Using the <code>Commits</code> Tab on the dashboard. A match can be
 initiated by you against the previous version of your own code.
+<br />
 <br />
 The list of matches you’ve played and top rated matches by other players are
 also available to watch on the <code>Battle TV</code>.
@@ -40,12 +42,12 @@ also available to watch on the <code>Battle TV</code>.
     alt="MapButtons"
     align="center"
 />
-<li>The two tower buttons allows you to select the tower to be built.</li>
+<li>The three tower buttons allows you to select the tower to be built.</li>
 <li>The move button helps you move the map around your window</li>
-<li>The clear button clear all the towers that was built earlier</li>
+<li>The clear button clear all the towers that were built earlier</li>
 <li>The erase button helps to remove a specific tower from its position</li>
 <li>
-    Save button allows you to have three options:
+    Save button allows you to have <b>three</b> options:
     <ol>
         <li>To save your map</li>
         <li>To commit your map in stages for later use</li>
@@ -53,6 +55,7 @@ also available to watch on the <code>Battle TV</code>.
     </ol>
 </li>
 
+<h3>History Page </h3>
 You can view your code and map commits and their corresponding code and map in the <code>History</code> page
 
 <img
@@ -62,6 +65,17 @@ You can view your code and map commits and their corresponding code and map in t
 />
 <br />
 <br />
+<h3>Tier System</h3>
+The participants are divided into two tiers based on their rankings. While the players in the first tier will be able to compete in games, 
+their ratings will only be affected by the automatches that are run among the first tier.
+<br />
+The second tier participants however can choose the player they want to attack and will have awarded points that affect their rating for 
+the same
+<br />
+There is a promotion algorithm that keeps pushing the most competitive and successful players into the top tier.
+<br />
+<br />
+<h3>Leadeboard </h3>
 The leaderboard evaluates your position using your rating, which is based purely
 on the outcomes of your matches with other players. The Glicko ranking mechanism
 is used to calculate ranks. Players who are more actively playing matches are rewarded
@@ -70,6 +84,20 @@ by this rating system as they tend to suffer lesser fall in ratings.
 <br />
 <img
     src="/img/Overview/CompetitionGuide/leaderboard.png"
-    alt="leaderboard"
+    alt="Leaderboard"
+    align="center"
+/>
+<br /> The leaderboard allows you
+to check the leaderboard for both the tiers.
+<br/>
+<br />
+<h3> Daily Challenge Leadeboard </h3>
+The Daily Challenge Leaderboard displays the ranking of those who participate in the daily challengs 
+which. They are evalutaed and given a score which inturn determines their ranking
+<br />
+<br />
+<img 
+    src="/img/Overview/CompetitionGuide/dcLeaderboard.png"
+    al="DC Leaderboard"
     align="center"
 />
