update: added story and updated attacker details

--- a/docs/GameRules.mdx
+++ b/docs/GameRules.mdx
@@ -9,7 +9,7 @@ Codecharacter is a game of strategic resource management. The objective of the g
 There are two types of units:
 
 <ul>
-  <li>Two types of towers</li>
+  <li>Three types of towers</li>
   <li>Three types of troops</li>
 </ul>
 <br />
