fix: grammar and images

--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -4,7 +4,7 @@ sidebar_position: 3
 
 # Competition Guide
 
-Ultimately, Codecharacter is a game of competition! The objective is to challenge other players and fight your way to the top of the leaderboard.
+Ultimately, CodeCharacter is a game of competition! The objective is to challenge other players and fight your way to the top of the leaderboard.
 
 <img
     src="/img/Overview/CompetitionGuide/buttons.png"
@@ -16,7 +16,7 @@ Ultimately, Codecharacter is a game of competition! The objective is to challeng
 Let us go through these buttons in order:
 <ol>
     <li><b>The Save button</b>: To save your present code</li>
-    <li><b>The Simulate button</b>: To simulate a match</li>
+    <li><b>The Simulate button</b>: To simulate a self-match with your own map and code</li>
     <li><b>The Commit button</b>: To commit your existing code into the commit history</li>
     <li><b>The Submit button</b>: This will submit your present code to the leaderboard</li>
 </ol>
@@ -39,12 +39,12 @@ also available to watch on the <code>Battle TV</code>.
 <br />
 <img
     src="/img/Overview/CompetitionGuide/MapButtons.png"
-    alt="MapButtons"
+    alt="Map Buttons"
     align="center"
 />
 <li>The three tower buttons allows you to select the tower to be built.</li>
 <li>The move button helps you move the map around your window</li>
-<li>The clear button clear all the towers that were built earlier</li>
+<li>The clear button clears all the towers that were built earlier</li>
 <li>The erase button helps to remove a specific tower from its position</li>
 <li>
     Save button allows you to have <b>three</b> options:
@@ -66,7 +66,7 @@ You can view your code and map commits and their corresponding code and map in t
 <br />
 <br />
 <h3>Tier System</h3>
-The participants are divided into two tiers based on their rankings. While the players in the first tier will be able to compete in games, 
+The participants are divided into two tiers based on their rankings. While the players in the first tier will be able to compete in matches, 
 their ratings will only be affected by the automatches that are run among the first tier.
 <br />
 The second tier participants however can choose the player they want to attack and will have awarded points that affect their rating for 
@@ -75,7 +75,7 @@ the same
 There is a promotion algorithm that keeps pushing the most competitive and successful players into the top tier.
 <br />
 <br />
-<h3>Leadeboard </h3>
+<h3>Leaderboard </h3>
 The leaderboard evaluates your position using your rating, which is based purely
 on the outcomes of your matches with other players. The Glicko ranking mechanism
 is used to calculate ranks. Players who are more actively playing matches are rewarded
@@ -91,9 +91,9 @@ by this rating system as they tend to suffer lesser fall in ratings.
 to check the leaderboard for both the tiers.
 <br/>
 <br />
-<h3> Daily Challenge Leadeboard </h3>
-The Daily Challenge Leaderboard displays the ranking of those who participate in the daily challengs 
-which. They are evalutaed and given a score which inturn determines their ranking
+<h3> Daily Challenge Leaderboard </h3>
+The Daily Challenge Leaderboard displays the ranking of those who participate in the daily challenges 
+which. They are evaluated and given a score which in turn determines their ranking
 <br />
 <br />
 <img 
