--- a/docs/GameRules.mdx
+++ b/docs/GameRules.mdx
@@ -4,7 +4,7 @@ sidebar_position: 2
 
 # Game Rules
 
-Codecharacter is a game of strategic resource management. The objective of the game for attacker is to destroy the defender's base as much as possible using the least number of coins possible. The defender’s objective is to kill the enemy attacking and save the base.
+Codecharacter is a game of strategic resource management. The objective of the game for the attacker is to destroy the defender's base as much as possible using the least number of coins possible. The defender’s objective is to kill the enemy attacking the base and save it.
 
 There are two types of units:
 
@@ -22,15 +22,15 @@ towers can defend the aerial troops while the other can defend the ground troops
 </div>
 
 <b>Troops</b> - Troops can move and attack when defenders come in range. They can
-not pass through the tower. Troops can only be spawned in the outer region of the map.
+not pass through towers. Troops can only be spawned in the outer region of the map.
 There are two ground troops and one aerial troop with their own characteristics which make each one unique.
 <div align="center">
   <img src="/img/Overview/GameRules/attackers.png" alt="troop" />
 </div>
 
-Towers occupy a 1x1 unit square area on the map in an isometric view and troops cannot move through a tower. Troops attack the tower till its health drops completely. Towers get destroyed once their health reaches zero
+Towers occupy a 1x1 square unit area on the map in an isometric view and troops cannot move through a tower. Troops attack the tower till its health drops completely. Towers are destroyed once their health reaches zero
 
-Towers can be constructed on the tile till you have coins left in the store. Troops can be built through your code.
+Towers can be constructed on the tile till you have coins left in the store. Troops can be spawned through your code.
 
 This is what a game map looks like :
 
@@ -42,5 +42,5 @@ bases as much as possible using as minimum an amount of coins as possible and th
 is to kill the enemy attacking and save the base.
 <br />
 <br />
-You will be given a fixed amount of coins to build your defender base. Your attacker base will be determined by
+You will be given a fixed amount of coins to build your defender base. Your attackers and their spwaning location will be determined by
 the code you write.
