troops through towers fix

--- a/docs/GameRules.mdx
+++ b/docs/GameRules.mdx
@@ -21,8 +21,7 @@ towers can defend the aerial troops while the other can defend the ground troops
   <img src="/img/Overview/GameRules/towers.png" alt="tower" />
 </div>
 
-<b>Troops</b> - Troops can move and attack when defenders come in range. They can
-not pass through towers. Troops can only be spawned in the outer region of the map.
+<b>Troops</b> - Troops can move and attack when defenders come in range. Troops can only be spawned in the outer region of the map.
 There are two ground troops and one aerial troop with their own characteristics which make each one unique.
 <div align="center">
   <img src="/img/Overview/GameRules/attackers.png" alt="troop" />
