--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -4,9 +4,7 @@ sidebar_position: 3
 
 # Competition Guide
 
-Ultimately, Codecharacter is a game of competetion! The objective is to challenge other players and fight your way to the top of the leaderboard.
-
-You can type your code in the Code Editor and click on the <code>Submit</code> button to submit your code to the leaderboard.
+Ultimately, CodeCharacter is a game of competition! The objective is to challenge other players and fight your way to the top of the leaderboard.
 
 <img
     src="/img/Overview/CompetitionGuide/buttons.png"
@@ -14,38 +12,42 @@ You can type your code in the Code Editor and click on the <code>Submit</code> b
     align="center"
 />
 <br />
-This will allow you to challenge anyone on the leaderboard with the submitted
-code. To challenge another player, simply click the challenge (sword icon)
-button next to their nickname on the leaderboard. You can keep submitting and
-updating your code whenever you want.
 <br />
-<br />
-Note that once you submit code, anyone can challenge you at anytime, and a match
+Let us go through these buttons in order:
+<ol>
+    <li><b>The Save button</b>: To save your present code</li>
+    <li><b>The Simulate button</b>: To simulate a self-match with your own map and code</li>
+    <li><b>The Commit button</b>: To commit your existing code into the commit history</li>
+    <li><b>The Submit button</b>: This will submit your present code to the leaderboard</li>
+</ol>
+Note that once you submit a code, anyone can challenge you at anytime, and a match
 will automatically be simulated between you and the opposing player. You will receive
 a notification once the match ends, and you can view it in the <code>
     Battle TV
 </code>
-. Click on any of the maps below each match to see the match.
+. Click on any of the maps below each match to see that match.
+<br />
 <br />
 You can also save different versions of your code by using the commit button on
 the top bar. Using the <code>Commits</code> Tab on the dashboard. A match can be
-initiated by you against your own previous code version.
+initiated by you against the previous version of your own code.
+<br />
 <br />
 The list of matches you’ve played and top rated matches by other players are
 also available to watch on the <code>Battle TV</code>.
 <br />
 <br />
 <img
-    src="/img/Overview/CompetitionGuide/MapButtons.jpeg"
-    alt="MapButtons"
+    src="/img/Overview/CompetitionGuide/MapButtons.png"
+    alt="Map Buttons"
     align="center"
 />
-<li>The two tower buttons allows you to select the tower to be built.</li>
-<li>The move button helps you to move the map around your window</li>
-<li>The clear button clear all the towers that was built earlier</li>
-<li>The erase button helps to remove specific tower from position</li>
+<li>The three tower buttons allows you to select the tower to be built.</li>
+<li>The move button helps you move the map around your window</li>
+<li>The clear button clears all the towers that were built earlier</li>
+<li>The erase button helps to remove a specific tower from its position</li>
 <li>
-    Save button allows you to have three options:
+    Save button allows you to have <b>three</b> options:
     <ol>
         <li>To save your map</li>
         <li>To commit your map in stages for later use</li>
@@ -53,23 +55,49 @@ also available to watch on the <code>Battle TV</code>.
     </ol>
 </li>
 
-You can view your code and map commits and their corresponding code and map in <code>History</code> page
+<h3>History Page </h3>
+You can view your code and map commits and their corresponding code and map in the <code>History</code> page
 
 <img
-    src="/img/Overview/CompetitionGuide/history.jpeg"
+    src="/img/Overview/CompetitionGuide/history.png"
     alt="history"
     align="center"
 />
 <br />
 <br />
+<h3>Tier System</h3>
+The participants are divided into two tiers based on their rankings. While the players in the first tier will be able to compete in matches, 
+their ratings will only be affected by the automatches that are run among the first tier.
+<br />
+The second tier participants however can choose the player they want to attack and will have awarded points that affect their rating for 
+the same
+<br />
+There is a promotion algorithm that keeps pushing the most competitive and successful players into the top tier.
+<br />
+<br />
+<h3>Leaderboard </h3>
 The leaderboard evaluates your position using your rating, which is based purely
 on the outcomes of your matches with other players. The Glicko ranking mechanism
 is used to calculate ranks. Players who are more actively playing matches are rewarded
-by this rating system, they tend to suffer lesser fall in ratings.
+by this rating system as they tend to suffer lesser fall in ratings.
 <br />
 <br />
 <img
-    src="/img/Overview/CompetitionGuide/leaderboard.jpeg"
-    alt="leaderboard"
+    src="/img/Overview/CompetitionGuide/leaderboard.png"
+    alt="Leaderboard"
+    align="center"
+/>
+<br /> The leaderboard allows you
+to check the leaderboard for both the tiers.
+<br/>
+<br />
+<h3> Daily Challenge Leaderboard </h3>
+The Daily Challenge Leaderboard displays the ranking of those who participate in the daily challenges 
+which. They are evaluated and given a score which in turn determines their ranking
+<br />
+<br />
+<img 
+    src="/img/Overview/CompetitionGuide/dcLeaderboard.png"
+    al="DC Leaderboard"
     align="center"
 />
