updated attacker values and 3 days

--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -5,6 +5,7 @@ sidebar_position: 3
 # Competition Guide
 
 Ultimately, CodeCharacter is a game of competition! The objective is to challenge other players and fight your way to the top of the leaderboard.
+Just to keep up the spirit of fair competition, the first three days will be practice days and will not officially affect and ratings.
 
 <img
     src="/img/Overview/CompetitionGuide/buttons.png"
