change docs for 2024

--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -5,7 +5,7 @@ sidebar_position: 3
 # Competition Guide
 
 Ultimately, CodeCharacter is a game of competition! The objective is to challenge other players and fight your way to the top of the leaderboard.
-Just to keep up the spirit of fair competition, the first three days will be practice days and will not officially affect and ratings.
+Just to keep up the spirit of fair competition, the first three days will be practice days and will not officially affect your ratings.
 
 <img
     src="/img/Overview/CompetitionGuide/buttons.png"
@@ -93,8 +93,7 @@ to check the leaderboard for both the tiers.
 <br/>
 <br />
 <h3> Daily Challenge Leaderboard </h3>
-The Daily Challenge Leaderboard displays the ranking of those who participate in the daily challenges 
-which. They are evaluated and given a score which in turn determines their ranking
+The Daily Challenge Leaderboard displays the ranking of those who participate in the daily challenges. They are evaluated and given a score which in turn determines their ranking
 <br />
 <br />
 <img 
@@ -102,3 +101,9 @@ which. They are evaluated and given a score which in turn determines their ranki
     al="DC Leaderboard"
     align="center"
 />
+<br />
+<br />
+<h3> PvP Leaderboard </h3>
+The PvP Leaderboard displays the rankings of players based on the PvP matches. To play a PvP match with another player, click on the Battle icon in the PvP Leaderboard.
+<br />
+<br />
