--- a/docs/GameRules.mdx
+++ b/docs/GameRules.mdx
@@ -40,6 +40,8 @@ This is what a game map looks like :
 bases as much as possible using as minimum an amount of coins as possible and the defender’s goal
 is to kill the enemy attacking and save the base.
 <br />
-<br />
 You will be given a fixed amount of coins to build your defender base. Your attackers and their spwaning location will be determined by
 the code you write.
+<br />
+<br />
+In the PvP game mode, your goal will be to outsmart your opponent and defeat all his attackers with your attackers. 
