fix: docs, story change and add stats

--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -103,6 +103,18 @@ The Daily Challenge Leaderboard displays the ranking of those who participate in
 />
 <br />
 <br />
+<h3> Statistics  </h3>
+The Statistics page lets you view and compare your match statistics with the leaderboard top.
+<br />
+<br />
+<img 
+    src="/img/Overview/Stats/stats.png"
+    al="DC Leaderboard"
+    align="center"
+/>
+<br />
+<br />
+
 <h3> PvP Leaderboard </h3>
 The PvP Leaderboard displays the rankings of players based on the PvP matches. To play a PvP match with another player, click on the Battle icon in the PvP Leaderboard.
 <br />
