--- a/docs/Competition Guide.mdx
+++ b/docs/Competition Guide.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_position: 3
+sidebar_position: 2
 ---
 
 # Competition Guide
 
 Ultimately, CodeCharacter is a game of competition! The objective is to challenge other players and fight your way to the top of the leaderboard.
-Just to keep up the spirit of fair competition, the first three days will be practice days and will not officially affect and ratings.
+Just to keep up the spirit of fair competition, the first two days will be practice days and will not officially affect your ratings.
 
 <img
     src="/img/Overview/CompetitionGuide/buttons.png"
@@ -20,13 +20,11 @@ Let us go through these buttons in order:
     <li><b>The Simulate button</b>: To simulate a self-match with your own map and code</li>
     <li><b>The Commit button</b>: To commit your existing code into the commit history</li>
     <li><b>The Submit button</b>: This will submit your present code to the leaderboard</li>
+    <li><b>The Mode Dropdown</b>: To change the editor's mode</li>
 </ol>
 Note that once you submit a code, anyone can challenge you at anytime, and a match
 will automatically be simulated between you and the opposing player. You will receive
-a notification once the match ends, and you can view it in the <code>
-    Battle TV
-</code>
-. Click on any of the maps below each match to see that match.
+a notification once the match ends.
 <br />
 <br />
 You can also save different versions of your code by using the commit button on
@@ -34,8 +32,7 @@ the top bar. Using the <code>Commits</code> Tab on the dashboard. A match can be
 initiated by you against the previous version of your own code.
 <br />
 <br />
-The list of matches you’ve played and top rated matches by other players are
-also available to watch on the <code>Battle TV</code>.
+The list of matches you’ve played are available to watch on the <code>Battle TV</code>.
 <br />
 <br />
 <img
@@ -93,12 +90,24 @@ to check the leaderboard for both the tiers.
 <br/>
 <br />
 <h3> Daily Challenge Leaderboard </h3>
-The Daily Challenge Leaderboard displays the ranking of those who participate in the daily challenges 
-which. They are evaluated and given a score which in turn determines their ranking
+The Daily Challenge Leaderboard displays the ranking of those who participate in the daily challenges. They are evaluated and given a score which in turn determines their ranking
 <br />
 <br />
 <img 
     src="/img/Overview/CompetitionGuide/dcLeaderboard.png"
+    al="DC Leaderboard"
+    align="center"
+/>
+<br />
+<br />
+<h3> PvP Leaderboard </h3>
+The PvP Leaderboard displays the rankings of players based on the PvP matches. To play a PvP match with another player, click on the Battle icon in the PvP Leaderboard.
+<h3> Statistics  </h3>
+The Statistics page lets you view and compare your match statistics with the leaderboard top.
+<br />
+<br />
+<img 
+    src="/img/Overview/Stats/stats.png"
     al="DC Leaderboard"
     align="center"
 />
