--- a/docs/Game Rules/NormalGame.mdx
+++ b/docs/Game Rules/NormalGame.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 2
+sidebar_position: 1
 ---
 
-# Game Rules
+# Normal Game Rules
 
 Codecharacter is a game of strategic resource management. The objective of the game for the attacker is to destroy the defender's base as much as possible using the least number of coins possible. The defender’s objective is to kill the enemy attacking the base and save it.
 
@@ -40,6 +40,8 @@ This is what a game map looks like :
 bases as much as possible using as minimum an amount of coins as possible and the defender’s goal
 is to kill the enemy attacking and save the base.
 <br />
-<br />
 You will be given a fixed amount of coins to build your defender base. Your attackers and their spwaning location will be determined by
 the code you write.
+<br />
+<br />
+In the PvP game mode, your goal will be to outsmart your opponent and defeat all his attackers with your attackers. 
