--- a/docs/Game Rules/NormalGame.mdx
+++ b/docs/Game Rules/NormalGame.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 2
+sidebar_position: 1
 ---
 
-# Game Rules
+# Normal Game Rules
 
 Codecharacter is a game of strategic resource management. The objective of the game for the attacker is to destroy the defender's base as much as possible using the least number of coins possible. The defender’s objective is to kill the enemy attacking the base and save it.
 
